Fix whitespace formatting in related strings

--- a/weblate/media/css/style.css
+++ b/weblate/media/css/style.css
@@ -60,7 +60,7 @@ body.dir-rtl #menu {
 .translatetext {
     background-color: #eee;
 }
-.translatetext a, .translatetext a span {
+.translatetext a, .translatetext a span.direction {
     display: block;
 }
 tr.current_translation td.translatetext {
